src/test/ui/error-codes/E0070.stderr
error[E0070]: invalid left-hand side of assignment
  --> $DIR/E0070.rs:6:16
   |
LL |     SOME_CONST = 14;
   |     ---------- ^
   |     |
   |     cannot assign to this expression

error[E0070]: invalid left-hand side of assignment
  --> $DIR/E0070.rs:7:7
   |
LL |     1 = 3;
   |     - ^
   |     |
   |     cannot assign to this expression

error[E0308]: mismatched types
  --> $DIR/E0070.rs:8:25
   |
LL |     some_other_func() = 4;
   |                         ^ expected `()`, found integer

error[E0070]: invalid left-hand side of assignment
  --> $DIR/E0070.rs:8:23
   |
LL |     some_other_func() = 4;
   |     ----------------- ^
   |     |
   |     cannot assign to this expression

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0070, E0308.
For more information about an error, try `rustc --explain E0070`.
